--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,22 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Arial, Poppins, Roboto, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: 000000;
+  background-color: FFFFFF;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-/*   -webkit-font-smoothing: antialiased;
+  /*   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%; */
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: 000000;
   text-decoration: inherit;
 }
 a:hover {
