--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,13 @@
+@import '../src/styles/variables.scss';
+
 :root {
   font-family: Inter, system-ui, Arial, Poppins, Roboto, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: 000000;
-  background-color: FFFFFF;
+  color: $primaryTextColor;
+  background-color: $primaryBgColor;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,21 +16,37 @@
   -webkit-text-size-adjust: 100%; */
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
-  color: 000000;
+  color: #000000;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  height: 100%;
+  text-rendering: optimizeSpeed;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1 {
@@ -66,4 +84,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+input:focus::placeholder {
+  color: transparent !important;
 }
