--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,17 +1,12 @@
-.layoutContainer {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  overflow: hidden;
-}
+@import '../../styles/media.scss';
 
-.contentContainer {
-  width: 100%;
-  height: 100%;
-  max-width: 1920px;
-  margin: 0 auto;
-  /* padding: 0 16px; */
+.layoutContainer {
+  min-height: 100vh;
+  overflow: hidden;
   position: relative;
+  display: flex;
+  flex-direction: column;
+
   &::before,
   &::after {
     content: '';
@@ -24,21 +19,50 @@
   }
   &::before {
     right: 0;
-    background-image: url('../../assets/images/right-top-bg.png');
-    width: 300px;
-    height: 315px;
+    width: 165px;
+    height: 170px;
+    background-image: url('../../assets/images/right-top-bg-small.png');
   }
   &::after {
-    left: 0;
+    left: -10px;
+    top: -15px;
+    height: 150px;
+    width: 170px;
     background-image: url('../../assets/images/left-top-bg.png');
-    width: 470px;
-    height: 415px;
   }
 }
 
-.layoutContent {
-  position: relative;
-  max-width: 860px;
-  padding: 0 12px;
-  margin: 0 auto;
+.mainBlock {
+  flex: 1 1 auto;
+}
+
+@include m-media(sm) {
+  .layoutContainer {
+    &::before {
+      right: -10px;
+      width: 300px;
+      height: 315px;
+    }
+    &::after {
+      width: 250px;
+      height: 220px;
+      left: -10px;
+      top: -10px;
+    }
+  }
+}
+
+@include m-media(xxxl) {
+  .layoutContainer {
+    &::before {
+      background-image: url('../../assets/images/right-top-bg.png');
+      width: 300px;
+      height: 315px;
+    }
+    &::after {
+      width: 470px;
+      height: 425px;
+      left: 0;
+    }
+  }
 }
