feat: add Button

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $primaryBgColor: #fff;
 $secondaryBgColor: #162c4e;
+$buttonBgColor: #1D4169;
 $elementBgColor: #df2224;
 
 $primaryTextColor: #000000;
