--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -3,6 +3,7 @@
 
 .inputContainer {
   padding: 5px;
+  position: relative;
 }
 
 .input {
@@ -14,6 +15,15 @@
   min-height: 41px;
   min-width: 280px;
   border-radius: 40px;
+}
+
+.inputButton {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  right: 10px;
+  min-width: 33px;
+  min-height: 33px;
 }
 
 input::placeholder {
@@ -32,5 +42,10 @@ input::placeholder {
   .input {
     min-height: 59px;
     min-width: 440px;
+  }
+  .inputButton {
+    min-width: 43px;
+    min-height: 43px;
+    right: 16px;
   }
 }
