--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
 $primaryBgColor: #fff;
 $secondaryBgColor: #162c4e;
-$buttonBgColor: #1D4169;
+$buttonBgColor: #1d4169;
 $elementBgColor: #df2224;
 
-$primaryTextColor: #000000;
+$primaryTextColor: rgba(0, 0, 0, 0.8);
 $secondaryTextColor: #ffffff;
 $blueTextColor: #162c4e;
 $inputPlaceholderTextColor: rgba(0, 0, 0, 0.6);
