--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -1,27 +1,48 @@
 @import '../../styles/media.scss';
+@import '../../styles/variables.scss';
 
 .badge {
+  
   min-width: 64px;
   min-height: 40px;
-  /*   width: 100%;
-  height: 100%; */
   position: relative;
-  &::after {
-    position: absolute;
-    content: '';
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-image: url('../../assets/images/badge.svg');
-  }
 }
 
+.text {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: $secondaryTextColor;
+  font-weight: 400;
+  font-size: 12px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Poppins';
+}
+
+.badgeIcon {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-image: url('../../assets/images/badge.svg');
+}
 @include m-media(sm) {
 }
 
 @include m-media(xxxl) {
-  .badge {
-    min-width: 132px;
-    min-height: 54px;
+  .text {
+    font-size: 16px;
+    text-transform: capitalize;
   }
 }
