--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
 
 .button {
   display: flex;
+  font-family: 'Poppins';
   align-items: center;
   justify-content: center;
   min-height: 33px;
@@ -19,12 +20,18 @@
 
 .primary {
   background-color: $buttonBgColor;
+  color: $secondaryTextColor;
+  padding: 16px 28px;
+  min-height: 60px;
+  font-size: 18px;
+  line-height: 150%;
 }
 
 .navigation {
   &::after {
     position: absolute;
     content: '';
+    right: 10px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -32,6 +39,10 @@
     width: 15.3px;
     height: 15.3px;
   }
+}
+
+.primary.navigation {
+  padding-right: 70px;
 }
 
 @include m-media(sm) {
