--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,5 +1,27 @@
+@import '../../styles/media.scss';
+@import '../../styles/variables.scss';
+
 .mainPageWrapper {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.simpleText {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  margin-top: 40px;
+  margin-bottom: 15px;
+}
+
+@include m-media(sm) {
+}
+
+@include m-media(xxxl) {
+  .simpleText {
+    font-size: 18px;
+    margin-bottom: 12px;
+    margin-top: 50px;
+  }
 }
