--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -5,6 +5,19 @@
   padding: 5px;
   position: relative;
 }
+.label {
+  display: none;
+}
+.error {
+  position: absolute;
+  content: '';
+  top: -25px;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  color: $secondaryTextColor;
+}
 
 .input {
   font-family: Roboto;
