feat: add modal

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@ $primaryBgColor: #fff;
 $secondaryBgColor: #162c4e;
 $buttonBgColor: #1d4169;
 $elementBgColor: #df2224;
+$modalBgColor: rgba(22, 44, 78, 0.6);
 
 $primaryTextColor: rgba(0, 0, 0, 0.8);
 $secondaryTextColor: #ffffff;
