--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -24,7 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 16px 27px;
+  padding: 0 27px;
   min-height: 41px;
   min-width: 280px;
   border-radius: 40px;
