--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -29,6 +29,7 @@
   min-width: 280px;
   border-radius: 40px;
   background-color: $primaryBgColor;
+  color: $primaryTextColor;
 }
 
 .inputButton {
